various z-index fixes, including fix to position organization close buttons above tooltip
git-svn-id: http://svn.localprojects.net/gam2/trunk@889 befef031-aaeb-48d0-b70f-681328309d3d

--- a/static/css/ie/tc.gam.ie7.css
+++ b/static/css/ie/tc.gam.ie7.css
@@ -27,8 +27,8 @@ ul.navbar li.search input[type=submit] { padding-left: 0; padding-right: 0;  }
 .continent.home .splash .row-3 { position: absolute; }
 .continent.home input.location-hood-enter { margin-left: 0; position: absolute;}
 .continent.home .location-hood-list { }
-.continent.home .info-input { height: auto; }
-.continent.home .info-input .east { height: 500px; }
+.continent.home .info-input { height: auto; }/*
+.continent.home .info-input .east { height: 500px; }*/
 
 .continent.home .midlands div.why-use li { clear:both; }
 .continent.home .midlands div.why-use li .text { float: left; margin-left: 0; }
